Automate all pages

--- a/funding.html
+++ b/funding.html
@@ -54,7 +54,7 @@
 					 Funding</h1>
 				<p>Our research is made possible by the generous funding provided by the following sources.
 					<br>Both <a href="#activeGrants">Active</a> and <a href="#completedGrants">Completed</a> grants are provided.
-					Download all here: <a href="./documents/Raj_Grants.csv" download="Raj_Grants.csv">
+					Download all here: <a href="./documents/Grants.csv" download="Raj_Grants.csv">
 						<i class='fas fa-file-csv' style='font-size: 35px;vertical-align: middle; padding-bottom: 7px;'></i>
 					</a>
 				</p>
@@ -96,7 +96,7 @@
 						return htmlStr
 					}
 
-					d3.csv("./documents/Raj_Grants.csv")
+					d3.csv("./documents/Grants.csv")
 						.then(function (data) {
 							data.forEach(d => {
 								if (d.Status == "Active") {
