Automate all pages

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 				</h5>
 			</div>
 		</div>
-		<div class="inner" id="homepageCols">
-			<div class="row container">
+		<div class="inner container" id="homepageCols">
+			<div class="row">
 				
 				<!-- Publications col -->
 				<div class="col-md-4 homepageColumn container" id="recent_pubs">
