--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 				<div class="row container JumpTo">
 					<p>Jump to:</p>
 					<div class="row">
+						<a href="#gallery7">GGS Retreat 2019</a>
+						<a href="#gallery6">Madison's Sendoff</a>
 						<a href="#gallery5">Lab Picnic</a>
 						<a href="#gallery4">Bull Hill Hiking</a>
 						<a href="#gallery3">Holiday Party Painting</a>
@@ -245,17 +247,32 @@
 			
 				<div class="row container" > 
 					<div class="col-md-12 activities"> 
+						<div class="row" id="gallery7">
+							<h4>GGS Retreat 2019</h4> 
+							<img src="./images/Action/GGS Retreat 2019 (1).jpg"> 
+							<img src="./images/Action/GGS Retreat 2019 (2).jpg"> 
+							<img src="./images/Action/GGS Retreat 2019 (3).jpg"> 
+						</div> 
+
+						<div class="row" id="gallery6">
+							<h4>Madison's Sendoff</h4> 
+							<img src="./images/Action/Madison Sendoff (1).jpg"> 
+							<img src="./images/Action/Madison Sendoff (2).jpg"> 
+							<img src="./images/Action/Madison Sendoff (3).jpg"> 
+							<img src="./images/Action/Madison Sendoff (4).jpg"> 
+							<img src="./images/Action/Madison Sendoff (5).jpg">
+						</div> 
 
 						<div class="row" id="gallery5">
 							<h4>Lab Picnic</h4> 
+							<img src="./images/Action/lab_picnic(2).jpg">  
+							<img src="./images/Action/lab_picnic(1).jpg">    
 							<img src="./images/Action/lab_picnic.jpg"> 
-							<img src="./images/Action/lab_picnic(1).jpg"> 
-							<img src="./images/Action/lab_picnic(2).jpg">   
-							<img src="./images/Action/lab_picnic(3).jpg">   
-							<img src="./images/Action/lab_picnic(4).jpg">   
-							<img src="./images/Action/lab_picnic(5).jpg">   
 							<img src="./images/Action/lab_picnic(6).jpg">   
-							<img src="./images/Action/lab_picnic(7).jpg">   
+							<img src="./images/Action/lab_picnic(7).jpg">  
+							<img src="./images/Action/lab_picnic(4).jpg">     
+							<img src="./images/Action/lab_picnic(3).jpg">    
+							<img src="./images/Action/lab_picnic(5).jpg">
 						</div> 
 
 						<div class="row" id="gallery4">
