--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 				<div class="row container JumpTo">
 					<p>Jump to:</p>
 					<div class="row">
+						<a href="#gallery8">ASHG 2019</a>
 						<a href="#gallery7">GGS Retreat 2019</a>
 						<a href="#gallery6">Madison's Sendoff</a>
 						<a href="#gallery5">Lab Picnic</a>
@@ -247,6 +248,25 @@
 			
 				<div class="row container" > 
 					<div class="col-md-12 activities"> 
+						<div class="row" id="gallery8">
+							<h4>Halloweeeeeeen!<br>2019</h4> 
+							<img src="./images/Action/Halloween-2019_2.jpg"> 
+							<img src="./images/Action/Halloween-2019_1.jpg"> 
+						</div> 
+
+						<div class="row" id="gallery8">
+							<h4>American Society<br>of Human Genetics<br>2019</h4> 
+							<img src="./images/Action/ASHG-2019_1.jpg"> 
+							<img src="./images/Action/ASHG-2019_2.jpg"> 
+							<img src="./images/Action/ASHG-2019_3.jpg"> 
+							<img src="./images/Action/ASHG-2019_4.jpg"> 
+							<img src="./images/Action/ASHG-2019_5.jpg"> 
+							<img src="./images/Action/ASHG-2019_6.jpg"> 
+							<img src="./images/Action/ASHG-2019_7.jpg"> 
+							<img src="./images/Action/ASHG-2019_8.jpg"> 
+							<img src="./images/Action/ASHG-2019_9.jpg"> 
+						</div> 
+
 						<div class="row" id="gallery7">
 							<h4>GGS Retreat 2019</h4> 
 							<img src="./images/Action/GGS Retreat 2019 (1).jpg"> 
