--- a/index.html
+++ b/index.html
@@ -235,21 +235,22 @@
 				<div class="row container JumpTo">
 					<p>Jump to:</p>
 					<div class="row">
+						<a href="#gallery9">HalloweeeEEEEeeen! 2019</a>
 						<a href="#gallery8">ASHG 2019</a>
 						<a href="#gallery7">GGS Retreat 2019</a>
-						<a href="#gallery6">Madison's Sendoff</a>
-						<a href="#gallery5">Lab Picnic</a>
-						<a href="#gallery4">Bull Hill Hiking</a>
-						<a href="#gallery3">Holiday Party Painting</a>
-						<a href="#gallery2">Friedman Brain Institute Holiday Party</a>
+						<a href="#gallery6">Madison's Sendoff 2019</a>
+						<a href="#gallery5">Lab Picnic 2019</a>
+						<a href="#gallery4">Bull Hill Hiking 2018</a>
+						<a href="#gallery3">Holiday Party Painting 2018</a>
+						<a href="#gallery2">Friedman Brain Institute Holiday Party 2018</a>
 						<a href="#gallery1">Science-ing</a>
 					</div> 
 				</div>
 			
 				<div class="row container" > 
 					<div class="col-md-12 activities"> 
-						<div class="row" id="gallery8">
-							<h4>Halloweeeeeeen!<br>2019</h4> 
+						<div class="row" id="gallery9">
+							<h4>HalloweeeEEEEeeen!<br>2019</h4> 
 							<img src="./images/Action/Halloween-2019_2.jpg"> 
 							<img src="./images/Action/Halloween-2019_1.jpg"> 
 						</div> 
@@ -275,7 +276,7 @@
 						</div> 
 
 						<div class="row" id="gallery6">
-							<h4>Madison's Sendoff</h4> 
+							<h4>Madison's Sendoff<br>2019</h4> 
 							<img src="./images/Action/Madison Sendoff (1).jpg"> 
 							<img src="./images/Action/Madison Sendoff (2).jpg"> 
 							<img src="./images/Action/Madison Sendoff (3).jpg"> 
@@ -284,7 +285,7 @@
 						</div> 
 
 						<div class="row" id="gallery5">
-							<h4>Lab Picnic</h4> 
+							<h4>Lab Picnic<br>2019</h4> 
 							<img src="./images/Action/lab_picnic(2).jpg">  
 							<img src="./images/Action/lab_picnic(1).jpg">    
 							<img src="./images/Action/lab_picnic.jpg"> 
@@ -296,14 +297,14 @@
 						</div> 
 
 						<div class="row" id="gallery4">
-							<h4>Bull Hill Hiking</h4> 
+							<h4>Bull Hill Hiking<br>2018</h4> 
 							<img src="./images/Action/BullHill_hike1.jpg"> 
 							<img src="./images/Action/BullHill_hike2.jpg"> 
 							<img src="./images/Action/BullHill_hike3.jpg">   
 						</div> 
 						
 						<div class="row" id="gallery3">
-							<h4>Holiday Party Painting</h4> 
+							<h4>Holiday Party Painting<br><2018></h4> 
 							<img src="./images/Action/holiday_painting4.jpg"> 
 							<img src="./images/Action/holiday_painting3.jpg"> 
 							<img src="./images/Action/holiday_painting2.jpg"> 
@@ -311,7 +312,7 @@
 						</div> 
 
 						<div class="row" id="gallery2">
-							<h4>Friedman Brain Institute Holiday Party</h4>
+							<h4>Friedman Brain Institute<br>Holiday Party<br>2018</h4>
 							<img src="./images/Action/FBI_holiday1.jpg">
 							<img src="./images/Action/FBI_holiday2.jpg"> 
 						</div>
