Update lab photos & Jack photo

--- a/joinus.html
+++ b/joinus.html
@@ -54,7 +54,7 @@
 				<h1><i class="fas fa-handshake"></i> Opportunities</h1>
 			</header>
 			<p>We aren't currently advertising any specific positions, 
-			but if you interested in joining the lab please email us below!
+			but if you are interested in joining the lab please email us below!
 			</p>
 		</div>
 		<br>
