--- a/index.html
+++ b/index.html
@@ -59,19 +59,22 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="./images/carousel/central_park0.JPG" alt="slide0" >
+				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_1.JPG" alt="slide0" >
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
+				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_2.JPG" alt="slide2">
+			</div>  
+			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
 			</div> 
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/carousel/central_park2.JPG" alt="slide2">
+				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_3.JPG" alt="slide4">
 			</div>  
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide4">
+				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide5">
 			</div> 
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
