Fix twitter feed

--- a/index.html
+++ b/index.html
@@ -149,11 +149,15 @@
 				</div>
 
 				<!-- Twitter col -->
+
+
 				<div class="col-md-4 homepageColumn" id="twitter">
 					<h3>Recent Tweets</h3>
-					<a class="twitter-timeline container" href="https://twitter.com/trajnp?ref_src=twsrc%5Etfw" height=84%>
-						Tweets by trajnp</a>
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					
+					<a class="twitter-timeline" href="https://twitter.com/towfiqueRaj?ref_src=twsrc%5Etfw">
+						Tweets by towfiqueRaj
+					</a> 
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 				</div>
 
 
