Fix twitter feed

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 				<div class="col-md-4 homepageColumn" id="twitter">
 					<h3>Recent Tweets</h3>
-					
+					<!-- Code below generated with: https://publish.twitter.com/# -->
 					<a class="twitter-timeline" href="https://twitter.com/towfiqueRaj?ref_src=twsrc%5Etfw">
 						Tweets by towfiqueRaj
 					</a> 
