Fix twitter feed

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 				<!-- Twitter col -->
 
 
-				<div class="col-md-4 homepageColumn" id="twitter">
+				<div class="col-md-4 homepageColumn container" id="twitter">
 					<h3>Recent Tweets</h3>
 					<!-- Code below generated with: https://publish.twitter.com/# -->
-					<a class="twitter-timeline" href="https://twitter.com/towfiqueRaj?ref_src=twsrc%5Etfw">
+					<a class="twitter-timeline" href="https://twitter.com/towfiqueRaj?ref_src=twsrc%5Etfw" height="440">
 						Tweets by towfiqueRaj
 					</a> 
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
