Join us page update

--- a/joinus.html
+++ b/joinus.html
@@ -53,8 +53,7 @@
 			<header>
 				<h1><i class="fas fa-handshake"></i> Opportunities</h1>
 			</header>
-			<p>We aren't currently advertising any specific positions, 
-			but if you are interested in joining the lab please email us below!
+			<p>We're looking for postdoctoral fellows, data scientist and statistical geneticists to work on NIH-funded research using computational approaches to identify drivers of Alzheimer’s and Parkinson’s disease. Please email us below for more information!
 			</p>
 		</div>
 		<br>
