--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE HTML>
 <!-- This website was created by Madison Parks and Brian M. Schilder -->
 <html>
 
 <head>
 	<title>Raj Lab @ MSSM</title>
-	<meta charset="utf-8" /> 
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
@@ -15,7 +15,7 @@
 	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- Local Scripts -->
 	<!-- <script src="assets/js/util.js"></script> -->
-	<script src="./assets/js/jquery.min.js"></script>  
+	<script src="./assets/js/jquery.min.js"></script>
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
@@ -27,25 +27,25 @@
 
 	<!-- Bootstrap-->
 	<script src="./assets/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" /> 
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 
 	<link href="./assets/css/thumbnail-gallery.css" rel="stylesheet">
 </head>
 
-<body>   
+<body>
 	<!-- Insert html files -->
-	<script> 
-		$(function(){ 
+	<script>
+		$(function(){
 			$("#background_video").load("./background_video.html");
 			$("#footer").load("./footer.html");
-			$("#navbar").load("./navbar.html");  
+			$("#navbar").load("./navbar.html");
 		});
-	</script> 
+	</script>
 	<!-- Video -->
-	<section id="background_video"></section> 
-	<!-- Navbar --> 
-	<section id="navbar"></section> 
- 
+	<section id="background_video"></section>
+	<!-- Navbar -->
+	<section id="navbar"></section>
+
 
 
 	<!-- Carousel -->
@@ -59,23 +59,23 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_1.JPG" alt="slide0" >
+				<img class="d-block w-100" src="./images/banner.jpg" alt="slide0" >
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_2.JPG" alt="slide2">
-			</div>  
+			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
-			</div> 
+			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_3.JPG" alt="slide4">
-			</div>  
+			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide5">
-			</div> 
+			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -86,7 +86,7 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
-	
+
 
 	<!-- Intro -->
 	<section class="homepageContent">
@@ -129,7 +129,7 @@
 		</div>
 		<div class="inner container" id="homepageCols">
 			<div class="row">
-				
+
 				<!-- Publications col -->
 				<div class="col-md-4 homepageColumn container" id="recent_pubs">
 					<h3>Recent Publications</h3>
@@ -142,7 +142,7 @@
 				<!-- News and Events col -->
 				<div class="col-md-4 homepageColumn news container" id="news">
 					<h3>News and Events</h3>
-					<div class="scroll"> 
+					<div class="scroll">
 						<ul id="News_Events_list"> </ul>
 					</div>
 					<a href="./projects.html" target="_blank" class="button alt">More News</a>
@@ -156,8 +156,8 @@
 					<!-- Code below generated with: https://publish.twitter.com/# -->
 					<a class="twitter-timeline" href="https://twitter.com/towfiqueRaj?ref_src=twsrc%5Etfw" height="440">
 						Tweets by towfiqueRaj
-					</a> 
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+					</a>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 
 
@@ -172,8 +172,8 @@
 					.then(function (data) {
 						// Method 2: As Divs
 						var createDivs = function (data) {
-							var createDataDiv = function (d) {  
-								var htmlStr =  
+							var createDataDiv = function (d) {
+								var htmlStr =
 									"<li><b>" + d.Date + "</b><hr>\
 										<p>" + d.Text + "</p>\
 									</li>"
@@ -184,11 +184,11 @@
 								if (d.Text != ""){
 									var htmlStr = createDataDiv(d);
 									$('#News_Events_list').append(htmlStr);
-								} 
+								}
 							});
 						}
 						createDivs(data);
-					});  
+					});
 			</script>
 
 		<!-- Highlight the most recent publications from CSV-->
@@ -196,8 +196,8 @@
 				d3.csv("./documents/Publications.csv")
 					.then(function (data) {
 						var createDivs = function (data) {
-							var createDataDiv = function (d) {  
-								var htmlStr =  
+							var createDataDiv = function (d) {
+								var htmlStr =
 								"<li><strong>" + d.Title + "</strong><br>\
 									<i>"+d.Journal + "<br>("+ d.Year + ")</i><br><hr>\
 									<a href='" + d.Link + "' target='_blank'>\
@@ -207,7 +207,7 @@
 									htmlStr += "<a href='" + d.NewsLink + "' target='_blank'>\
 													<i class='fa fa-newspaper-o'></i> Press\
 												</a>"
-								} 
+								}
 								htmlStr += "</li>"
 								return htmlStr
 							}
@@ -216,11 +216,11 @@
 								if (d.Text != ""){
 									var htmlStr = createDataDiv(d);
 									$('#publication_list').append(htmlStr);
-								} 
+								}
 							});
 						}
 						createDivs(data);
-					});  
+					});
 			</script>
 
 		<!-- Correct vertical alignment of in-page links-->
@@ -230,69 +230,69 @@
 			window.addEventListener("hashchange", shiftWindow);
 		</script>
 		<!-- Automatically generate publications from file -->
-	
+
 
 
 	<script>
 		d3.csv("./documents/Lab_Activities.csv")
 			// D3 Tutorial: https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html
-			.then(function (data) { 
+			.then(function (data) {
 				var createDivs = function (data) {
 					// Iterate over each project group
-					var unique_groups = d3.map(data, function(d){return(d.Event+" "+d.Year)}).keys() 
-					data.forEach(function(d) {return d.Group = d.Event+" "+d.Year;}); 
+					var unique_groups = d3.map(data, function(d){return(d.Event+" "+d.Year)}).keys()
+					data.forEach(function(d) {return d.Group = d.Event+" "+d.Year;});
 					unique_groups.forEach((g,i) => {
-						// console.log(g)  
+						// console.log(g)
 						// console.log(i)
 						var dsub = data.filter(function(d){console.log(d.Group); return d.Group === g })
-						dsub.forEach(function(d) {return d.Gallery = "gallery"+i;});   
-						var gallery_id = "gallery"+i 
+						dsub.forEach(function(d) {return d.Gallery = "gallery"+i;});
+						var gallery_id = "gallery"+i
 						console.log("GALLERY:"+gallery_id)
 						// Add group to navigation buttons
 						$('#activitiesCollapse_rows').append("<a href='"+gallery_id+"'>"+g+"</a>")
 						// Iterate over rows within groups
-						$('#activities_images').append("<div class='row' id='"+gallery_id+"'><h4>"+g+"</h4></div>") 
-						dsub.forEach(d => { 
+						$('#activities_images').append("<div class='row' id='"+gallery_id+"'><h4>"+g+"</h4></div>")
+						dsub.forEach(d => {
 							console.log(d)
 							console.log(d.Gallery)
-							if (d.Image != ""){ 
-								$("#"+d.Gallery).append("<img src='"+d.Image+"'>")  
-							} 
-						}); 
-					}) 
+							if (d.Image != ""){
+								$("#"+d.Gallery).append("<img src='"+d.Image+"'>")
+							}
+						});
+					})
 				}
 				createDivs(data);
-			});  
+			});
 	</script>
- 
+
 
 		<!-- Activities -->
 		<div class="inner" class="Activities">
-			<a class="collapseButton" data-toggle="collapse" href="#activitiesCollapse" 
+			<a class="collapseButton" data-toggle="collapse" href="#activitiesCollapse"
 			role="button" aria-expanded="true" aria-controls="activitiesCollapse">
-				<h3>Lab Activities!</h3> 
+				<h3>Lab Activities!</h3>
 			</a>
-			
-			<div class="collapse show" id="activitiesCollapse"> 
+
+			<div class="collapse show" id="activitiesCollapse">
 				<!-- Navigation bar -->
 				<div class="row container JumpTo">
 					<p>Jump to:</p>
-					<div class="row" id="activitiesCollapse_rows"></div> 
+					<div class="row" id="activitiesCollapse_rows"></div>
 				</div>
 				<!-- Images -->
-				<div class="row container" > 
+				<div class="row container" >
 					<div class="col-md-12 activities" id="activities_images"></div>
 				</div>
-			</div> 
+			</div>
 		</div>
 
- 
+
 		<!-- Footer -->
 		<section id="footer"></section>
 
 
 
- 
+
 
 </body>
 
