--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="./images/banner.jpg" alt="slide0" >
+				<img class="d-block w-100" src="./images/carousel/lab_photo_2023_1.jpg" alt="slide0" >
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/pacman_titles-descriptions_noBackground.png" alt="slide1" style="padding:10% 20% 20% 20%;">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/carousel/lab_photo_2019_2.JPG" alt="slide2">
+				<img class="d-block w-100" src="./images/carousel/lab_photo_2023_2.jpg" alt="slide2">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100 wordcloud" src="./images/wordclouds/braincloud_authors_noBackground.png" alt="slide3" style="padding:10% 20% 20% 20%;">
