Adding visiting scholars

--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
 
 
             <div id="visiting_members">
-                <h2>Visiting & Rotation Students</h2>
+                <h2>Visiting Scholars & Rotation Students</h2>
                 <p>
                     <ul id="student_list"></ul>
                 </p>
